assets/css/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "regular";
  src: url("/fonts/StabilGrotesk-Regular.woff2") format("truetype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "medium";
  src: url("/fonts/StabilGrotesk-Medium.woff2") format("truetype");
  font-weight: normal;
  font-style: normal;
}

body {
  font-family: "regular", sans-serif;
  min-height: 100vh;
  min-height: -webkit-fill-available;
}

html {
  height: -webkit-fill-available;
}

h1,
.bold {
  font-family: "medium", sans-serif;
}

html,
body,
.wrapper,
.navbar,
.btn {
  transition: background-color 0.2s ease;
}

html.light-mode {
  background-color: #fdfaf5;
  background: #fdfaf5;
  color-scheme: light;
}

html.dark-mode {
  background-color: #121212;
  background: #121212;
  color-scheme: dark;
}

.btn {
  /* background-color: #70a2e1; */
  display: flex;
  padding: 0.5rem 1.25rem; 
  border-radius: 0.5rem; 
  border: 2px solid #e5e5e5;
  transition: color 300ms, background-color 300ms, border-color 300ms;
  color: #131212;
}

.btn:hover {
  /* background-color: #3c61e5; */
  border: 2px solid #d4d4d4;
}

.dark-mode .btn {
  background-color: #1c1c1c;
  border: 2px solid #1c1c1c;
  color: #dddddd;
}

.dark-mode .btn:hover {
  background-color: #161616;
  border: 2px solid #161616;
}

::selection {
  background-color: #70a2e1;
}

::-moz-selection {
  background-color: #70a2e1;
}

.dark-mode ::selection,
.dark-mode ::-moz-selection {
  color: #121212;
  -webkit-text-fill-color: #121212;
}

.locked {
  overflow: hidden;
}

